--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
         <div class="popup__help" id="popup-help">
           <div class="popup-help__content">
             <div class="popup-help__close">&#10005;</div>
-            <div class="popup-help__step1 popup-help__step_active">
+            <div class="popup-help__step popup-help__step1">
               <div class="popup-help-step__content">
                 <div class="step__content-title">Вам необходимы двери:</div>
                 <div class="step__content-row">
@@ -83,7 +83,7 @@
                 <div class="help-line help-line__step1"></div>
               </div>
             </div>
-            <div class="popup-help__step2">
+            <div class="popup-help__step popup-help__step2">
               <div class="popup-help-step__content">
                 <div class="step__content-title">Ваш бюджет:</div>
                 <ul>
@@ -97,7 +97,7 @@
                 <div class="help-line help-line__step2"></div>
               </div>
             </div>
-            <div class="popup-help__step3">
+            <div class="popup-help__step popup-help__step3">
               <div class="popup-help-step__content">
                 <div class="step__content-title step3__content-title">Наш менеджер перезвонит вам в течение короткого времени, подберет лучший вариант и ответит на любые вопросы </div>
                 <div class="step__content-row step3__content-row">
@@ -120,7 +120,7 @@
                 <div class="help-line help-line__step3"></div>
               </div>
             </div>
-            <div class="popup-help__step4">
+            <div class="popup-help__step popup-help__step4">
               <div class="popup-help-step__content">
                 <h6 class="step__content-title step4__content-title">Спасибо за обращение!</h6>
                 <div class="step__content-text">
@@ -496,7 +496,7 @@
           </div>
           <div class="block__row block__row-pages">
             <div class="main-btn catlog__main-btn">
-              <a href="#" class="main-btn__link _anim-items">Перейти в каталог</a>
+              <a href="#" class="main-btn__link _anim-items">Смотреть все</a>
               <div class="main-btn__arrow view-btn__arrow _anim-items">
                 <span class="main-btn__circle _anim-items"></span>
               </div>
