--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="popup__help" id="popup-help">
           <div class="popup-help__content">
             <div class="popup-help__close">&#10005;</div>
-            <div class="popup-help__step1 popup-help__step_active">
+            <div class="popup-help__step popup-help__step1">
               <div class="popup-help-step__content">
                 <div class="step__content-title">Вам необходимы двери:</div>
                 <div class="step__content-row">
@@ -102,7 +102,7 @@
                 <div class="help-line help-line__step1"></div>
               </div>
             </div>
-            <div class="popup-help__step2">
+            <div class="popup-help__step popup-help__step2">
               <div class="popup-help-step__content">
                 <div class="step__content-title">Ваш бюджет:</div>
                 <ul>
@@ -116,7 +116,7 @@
                 <div class="help-line help-line__step2"></div>
               </div>
             </div>
-            <div class="popup-help__step3">
+            <div class="popup-help__step popup-help__step3">
               <div class="popup-help-step__content">
                 <div class="step__content-title step3__content-title">Наш менеджер перезвонит вам в течение короткого времени, подберет лучший вариант и ответит на любые вопросы </div>
                 <div class="step__content-row step3__content-row">
@@ -139,7 +139,7 @@
                 <div class="help-line help-line__step3"></div>
               </div>
             </div>
-            <div class="popup-help__step4">
+            <div class="popup-help__step popup-help__step4">
               <div class="popup-help-step__content">
                 <h6 class="step__content-title step4__content-title">Спасибо за обращение!</h6>
                 <div class="step__content-text">
@@ -314,7 +314,7 @@
           </div>
           <div class="block__row block__row-pages">
             <div class="main-btn catlog__main-btn">
-              <a href="#" class="main-btn__link _anim-items">Перейти в каталог</a>
+              <a href="catalog.html" class="main-btn__link _anim-items">Перейти в каталог</a>
               <div class="main-btn__arrow view-btn__arrow _anim-items">
                 <span class="main-btn__circle _anim-items"></span>
               </div>
@@ -372,7 +372,7 @@
             <h4 class="block__title">Для дома</h4>
             <p class="block__text">Теплые двери с терморазрывом, созданы чтобы согревать и радовать эстетикой</p>
             <div class="main-btn main-btn-benefits">
-              <a href="#" class="main-btn__link main-btn-benefits__link">Перейти в каталог</a>
+              <a href="catalog.html" class="main-btn__link main-btn-benefits__link">Перейти в каталог</a>
               <div class="main-btn__arrow main-btn-benefits__arrow home-btn__arrow">
                 <span class="main-btn__circle main-btn-benefits__circle"></span>
               </div>
@@ -382,7 +382,7 @@
             <h4 class="block__title block__title-600">Для квартиры</h4>
             <p class="block__text block__text-600">Стильные решения для тех, кто предпочетает жить в городе</p>
             <div class="main-btn-600 main-btn-benefits">
-              <a href="#" class="main-btn__link main-btn-benefits__link">Перейти в каталог</a>
+              <a href="catalog.html" class="main-btn__link main-btn-benefits__link">Перейти в каталог</a>
               <div class="main-btn__arrow main-btn-benefits__arrow"><span
                   class="main-btn__circle main-btn-benefits__circle"></span></div>
             </div>
