--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script defer src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script defer src="js/inputmask.min.js"></script>
+  <script defer src="js/just-validate.min.js"></script>
   <script defer src="js/main.js"></script>
   <script defer src="js/accordion.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -90,55 +92,56 @@
         <div class="popup__help" id="popup-help">
           <div class="popup-help__content">
             <div class="popup-help__close">&#10005;</div>
-            <div class="popup-help__step popup-help__step1">
-              <div class="popup-help-step__content">
-                <div class="step__content-title">Вам необходимы двери:</div>
-                <div class="step__content-row">
-                  <input type="button" value="В квартиру" class="step__content-btn step__content-btn_active">
-                  <input type="button" value="В дом" class="step__content-btn">
-                </div>
-              </div>
-              <div class="popup-help__line">
-                <div class="help-line help-line__step1"></div>
-              </div>
-            </div>
-            <div class="popup-help__step popup-help__step2">
-              <div class="popup-help-step__content">
-                <div class="step__content-title">Ваш бюджет:</div>
-                <ul>
-                  <li class="budget-item">30 000 ₽ — 50 000 ₽</li>
-                  <li class="budget-item">50 000 ₽ — 70 000 ₽</li>
-                  <li class="budget-item">70 000 ₽ — 90 000 ₽</li>
-                  <li class="budget-item">90 000 ₽ — больше</li>
-                </ul>
-              </div>
-              <div class="popup-help__line">
-                <div class="help-line help-line__step2"></div>
-              </div>
-            </div>
-            <div class="popup-help__step popup-help__step3">
-              <div class="popup-help-step__content">
-                <div class="step__content-title step3__content-title">Наш менеджер перезвонит вам в течение короткого времени, подберет лучший вариант и ответит на любые вопросы </div>
-                <div class="step__content-row step3__content-row">
-                  <div class="step__content-phone">
-                    <div class="callback__tel callback__tel-popup">Телефон
-                      <input type="tel" name="phone" id="#">
-                      <span class="callback__tel-line"></span>
-                    </div>
-                    <p class="personal-data popup__personal-data">
-                      Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
-                      <a href="#">персональных данных</a>
-                    </p>
-                  </div>
-                  <div class="callback__col">
-                    <button class="callback__btn callback__btn-popup">Отправить</button>
+            <form action="" class="help-form">
+              <div class="popup-help__step popup-help__step1">
+                <div class="popup-help-step__content">
+                  <div class="step__content-title">Вам необходимы двери:</div>
+                  <div class="step__content-row">
+                    <input type="button" value="В квартиру" class="step__content-btn step__content-btn_active">
+                    <input type="button" value="В дом" class="step__content-btn">
                   </div>
                 </div>
+                <div class="popup-help__line">
+                  <div class="help-line help-line__step1"></div>
+                </div>
               </div>
-              <div class="popup-help__line">
-                <div class="help-line help-line__step3"></div>
+              <div class="popup-help__step popup-help__step2">
+                <div class="popup-help-step__content">
+                  <div class="step__content-title">Ваш бюджет:</div>
+                  <ul>
+                    <li class="budget-item">30 000 ₽ — 50 000 ₽</li>
+                    <li class="budget-item">50 000 ₽ — 70 000 ₽</li>
+                    <li class="budget-item">70 000 ₽ — 90 000 ₽</li>
+                    <li class="budget-item">90 000 ₽ — больше</li>
+                  </ul>
+                </div>
+                <div class="popup-help__line">
+                  <div class="help-line help-line__step2"></div>
+                </div>
               </div>
-            </div>
+              <div class="popup-help__step popup-help__step3">
+                <div class="popup-help-step__content">
+                  <div class="step__content-title step3__content-title">Наш менеджер перезвонит вам в течение короткого времени, подберет лучший вариант и ответит на любые вопросы </div>
+                  <div class="step__content-row step3__content-row">
+                      <div class="step__content-phone">
+                        <div class="callback__tel callback__tel-popup">
+                          <input type="tel" name="phone" placeholder="Телефон" id="#" class="input-tel" data-validate-field="formTel" data-validate-rules="form-phone">
+                          <span class="callback__tel-line"></span>
+                        </div>
+                        <p class="personal-data popup__personal-data">
+                          Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
+                          <a href="#">персональных данных</a>
+                        </p>
+                      </div>
+                      <div class="callback__col">
+                        <button type="submit" class="callback__btn callback__btn-popup">Отправить</button>
+                      </div>
+                  </div>
+                </div>
+                <div class="popup-help__line">
+                  <div class="help-line help-line__step3"></div>
+                </div>
+              </div>
             <div class="popup-help__step popup-help__step4">
               <div class="popup-help-step__content">
                 <h6 class="step__content-title step4__content-title">Спасибо за обращение!</h6>
@@ -151,6 +154,7 @@
                 <div class="help-line help-line__step4"></div>
               </div>
             </div>
+          </form>
           </div>
         </div>
       </div>
@@ -806,24 +810,26 @@
       </section>
       <div class="callback__section">
         <div class="section__col-700">
-          <div class="callback__row">
-            <div class="callback__col">
-              <p class="callback__title">Мы перезвоним вам в течение короткого времени</p>
-              <p class="block__text callback__text">Поможем выбрать дверь и ответим на любые вопросы</p>
+          <form class="callback-form">
+            <div class="callback__row">
+              <div class="callback__col">
+                <p class="callback__title">Мы перезвоним вам в течение короткого времени</p>
+                <p class="block__text callback__text">Поможем выбрать дверь и ответим на любые вопросы</p>
 
-              <div class="callback__tel">Телефон
-                <input type="tel" name="phone" >
-                <span class="callback__tel-line _anim-items"></span>
+                <div class="callback__tel">
+                  <input type="tel" placeholder="Телефон" name="phone" class="input-tel" data-validate-field="formTel" data-validate-rules="form-phone">
+                  <span class="callback__tel-line _anim-items"></span>
+                </div>
+                <p class="personal-data">
+                  Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
+                  <a href="#">персональных данных</a>
+                </p>
               </div>
-              <p class="personal-data">
-                Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
-                <a href="#">персональных данных</a>
-              </p>
+              <div class="callback__col">
+                <button class="callback__btn">Отправить</button>
+              </div>
             </div>
-            <div class="callback__col">
-              <button class="callback__btn">Отправить</button>
-            </div>
-          </div>
+          </form>
         </div>
       </div>
     </div>
