--- a/catalog.html
+++ b/catalog.html
@@ -102,40 +102,42 @@
               </div>
               <div class="popup-help__step popup-help__step3">
                 <div class="popup-help-step__content">
-                  <div class="step__content-title step3__content-title">Наш менеджер перезвонит вам в течение короткого времени, подберет лучший вариант и ответит на любые вопросы </div>
+                  <div class="step__content-title step3__content-title">Наш менеджер перезвонит вам в течение короткого
+                    времени, подберет лучший вариант и ответит на любые вопросы </div>
                   <div class="step__content-row step3__content-row">
-                      <div class="step__content-phone">
-                        <div class="callback__tel callback__tel-popup">
-                          <input type="tel" name="phone" placeholder="Телефон" id="#" class="input-tel" data-validate-field="formTel" data-validate-rules="form-phone">
-                          <span class="callback__tel-line"></span>
-                        </div>
-                        <p class="personal-data popup__personal-data">
-                          Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
-                          <a href="#">персональных данных</a>
-                        </p>
+                    <div class="step__content-phone">
+                      <div class="callback__tel callback__tel-popup">
+                        <input type="tel" name="phone" placeholder="Телефон" id="#" class="input-tel"
+                          data-validate-field="formTel" data-validate-rules="form-phone">
+                        <span class="callback__tel-line"></span>
                       </div>
-                      <div class="callback__col">
-                        <button type="submit" class="callback__btn callback__btn-popup">Отправить</button>
-                      </div>
+                      <p class="personal-data popup__personal-data">
+                        Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
+                        <a href="#">персональных данных</a>
+                      </p>
+                    </div>
+                    <div class="callback__col">
+                      <button type="submit" class="callback__btn callback__btn-popup">Отправить</button>
+                    </div>
                   </div>
                 </div>
                 <div class="popup-help__line">
                   <div class="help-line help-line__step3"></div>
                 </div>
               </div>
-            <div class="popup-help__step popup-help__step4">
-              <div class="popup-help-step__content">
-                <h6 class="step__content-title step4__content-title">Спасибо за обращение!</h6>
-                <div class="step__content-text">
-                  Мы получили вашу заявку и перезвоним в близжайшее время
+              <div class="popup-help__step popup-help__step4">
+                <div class="popup-help-step__content">
+                  <h6 class="step__content-title step4__content-title">Спасибо за обращение!</h6>
+                  <div class="step__content-text">
+                    Мы получили вашу заявку и перезвоним в близжайшее время
+                  </div>
+                  <div class="popup__ok"></div>
                 </div>
-                <div class="popup__ok"></div>
+                <div class="popup-help__line">
+                  <div class="help-line help-line__step4"></div>
+                </div>
               </div>
-              <div class="popup-help__line">
-                <div class="help-line help-line__step4"></div>
-              </div>
-            </div>
-          </form>
+            </form>
           </div>
         </div>
       </div>
@@ -191,27 +193,32 @@
             </div>
             <div class="block__row filter__row-radio">
               <label class="filter__label">
-                <input type="radio" name="" id="" class="filter__radio">
+                <input type="checkbox" name="checkbox" id="" class="filter__radio">
+                <span class="input-radio"></span>
                 С терморазрывом
               </label>
               <label class="filter__label">
-                <input type="radio" name="" id="" class="filter__radio">
+                <input type="checkbox" name="checkbox" id="" class="filter__radio">
+                <span class="input-radio"></span>
                 Взломостойкие
               </label>
               <label class="filter__label">
-                <input type="radio" name="" id="" class="filter__radio">
+                <input type="checkbox" name="checkbox" id="armored" class="filter__radio">
+                <span class="input-radio"></span>
                 Бронированные
               </label>
             </div>
           </div>
         </div>
         <div class="filter__row_bottom">
-          <label class="filter__label filter__label_active">
+          <label class="filter__label input-radio__label input-radio__label_active">
             <input type="radio" name="price" id="" class="filter__radio_small" checked>
+            <span class="input-radio__small"></span>
             По возрастанию цены
           </label>
-          <label class="filter__label">
+          <label class="filter__label input-radio__label">
             <input type="radio" name="price" id="" class="filter__radio_small">
+            <span class="input-radio__small"></span>
             По убыванию цены
           </label>
         </div>
@@ -375,7 +382,7 @@
             </ul>
           </div>
           <div class="block__col-300 unique__row">
-            <ul  class="_anim-items">
+            <ul class="_anim-items">
               <li class="col__item">
                 <p class="section__text">Доставка</p>
                 <span class="bottom__line"></span>
@@ -634,8 +641,8 @@
               <h6 class="newcomer__title">Всем новоселам даем особо выгодные условия — двери со скидкой 7%</h6>
               <div class="newcomer-btn _anim-items">
                 <a href="#" class="main-btn__link newcomer-btn__link _anim-items">Получить скидку</a>
-                <div class="main-btn__arrow newcomer-btn__arrow _anim-items"><span
-                    class="circle _anim-items"></span></div>
+                <div class="main-btn__arrow newcomer-btn__arrow _anim-items"><span class="circle _anim-items"></span>
+                </div>
               </div>
             </div>
           </div>
@@ -655,13 +662,13 @@
           <div class="container">
             <div class="newcomer__container">
               <div class="newcomer__close newcomer__close2">&#10005;</div>
-              <h6 class="newcomer__title">Свое уважение к пожилым людям мы воплотили в возможность получения ими специальной скидки в размере 10% на все модели</h6>
+              <h6 class="newcomer__title">Свое уважение к пожилым людям мы воплотили в возможность получения ими
+                специальной скидки в размере 10% на все модели</h6>
               <div class="newcomer-btn _anim-items">
                 <a href="#" class="main-btn__link newcomer-btn__link _anim-items">Получить скидку</a>
                 <div class="main-btn__arrow newcomer-btn__arrow _anim-items">
-                  <span
-                    class="circle _anim-items"></span>
-                  </div>
+                  <span class="circle _anim-items"></span>
+                </div>
               </div>
             </div>
           </div>
@@ -783,36 +790,36 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__row">
-          <div class="footer__row-top">
-            <a href="index.html" class="footer__logo">Expert</a>
-            <ul class="footer__menu">
-              <li class="footer__menu-item">
-                <a href="catalog.html" class="footer__menu-link">Каталог</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Как выбрать двери</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Акции</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">О производителе</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Карта сайта</a>
-              </li>
-            </ul>
-            <div class="footer__col_right">
-              <a href="tel:+78006666666" class="bottom__link-tel">8 800 666 66 66</a>
-              <p class="footer__text">Бесплатный звонок</p>
-            </div>
+        <div class="footer__row-top">
+          <a href="index.html" class="footer__logo">Expert</a>
+          <ul class="footer__menu">
+            <li class="footer__menu-item">
+              <a href="catalog.html" class="footer__menu-link">Каталог</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">Как выбрать двери</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">Акции</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">О производителе</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">Карта сайта</a>
+            </li>
+          </ul>
+          <div class="footer__col_right">
+            <a href="tel:+78006666666" class="bottom__link-tel">8 800 666 66 66</a>
+            <p class="footer__text">Бесплатный звонок</p>
           </div>
-          <div class="footer__row-bottom">
-            <a href="" class="footer__bottom-link">&copy; Expert 2021 все права защищены</a>
-            <a href="" class="footer__bottom-link">Обработка персональных данных</a>
-            <a href="" class="footer__bottom-link">Политика конфиденциальности</a>
-            <a href="#" class="social__link">Instagtam</a>
-          </div>
+        </div>
+        <div class="footer__row-bottom">
+          <a href="" class="footer__bottom-link">&copy; Expert 2021 все права защищены</a>
+          <a href="" class="footer__bottom-link">Обработка персональных данных</a>
+          <a href="" class="footer__bottom-link">Политика конфиденциальности</a>
+          <a href="#" class="social__link">Instagtam</a>
+        </div>
 
       </div>
     </div>
@@ -847,35 +854,63 @@
 
 
   <script type="text/javascript">
-  document.querySelectorAll('.bullet').forEach(function (tabsBtn) {
-  tabsBtn.addEventListener('click', function(event) {
-    const path = event.currentTarget.dataset.path
-    document.querySelectorAll('.bullet').forEach(function(rem) {
-      rem.classList.toggle('bullet__active')
-    })
-    tabsBtn.classList.add('bullet__active')
-    document.querySelectorAll('.newcomer__tab').forEach(function(tabContent) {
-        tabContent.classList.remove('newcomer__tab_active')
-    })
-    document.querySelector(`[data-target="${path}"]`).classList.add('newcomer__tab_active')
-  })
-});
-
-const closeSec = document.querySelector('.newcomer__close1');
-  closeSec.addEventListener('click', function () {
-    document.querySelector('.catalog-ofert__section').classList.toggle('done');
-  });
-
-
-const closeSec2 = document.querySelectorAll('.newcomer__close2');
-if (closeSec2.length > 0) {
-  for (let index = 0; index < closeSec2.length; index++) {
-    const closeSec1 = closeSec2[index];
-    closeSec1.addEventListener('click', function () {
-      document.querySelector('.newcomer__section').classList.toggle('done');
+    document.querySelectorAll('.bullet').forEach(function (tabsBtn) {
+      tabsBtn.addEventListener('click', function (event) {
+        const path = event.currentTarget.dataset.path
+        document.querySelectorAll('.bullet').forEach(function (rem) {
+          rem.classList.toggle('bullet__active')
+        })
+        tabsBtn.classList.add('bullet__active')
+        document.querySelectorAll('.newcomer__tab').forEach(function (tabContent) {
+          tabContent.classList.remove('newcomer__tab_active')
+        })
+        document.querySelector(`[data-target="${path}"]`).classList.add('newcomer__tab_active')
+      })
     });
-  }
-}
+
+    const closeSec = document.querySelector('.newcomer__close1');
+    closeSec.addEventListener('click', function () {
+      document.querySelector('.catalog-ofert__section').classList.toggle('done');
+    });
+
+
+    const closeSec2 = document.querySelectorAll('.newcomer__close2');
+    if (closeSec2.length > 0) {
+      for (let index = 0; index < closeSec2.length; index++) {
+        const closeSec1 = closeSec2[index];
+        closeSec1.addEventListener('click', function () {
+          document.querySelector('.newcomer__section').classList.toggle('done');
+        });
+      }
+    }
+
+
+
+
+    const checks = document.querySelectorAll('.filter__radio');
+    if (checks.length > 0) {
+      for (let i = 0; i < checks.length; i++) {
+        const check = checks[i];
+        check.addEventListener('click', function () {
+          check.parentNode.classList.toggle('filter__label_active');
+        })
+      }
+    }
+
+    const checks2 = document.querySelectorAll('.filter__radio_small');
+    if (checks2.length > 0) {
+      for (let i = 0; i < checks2.length; i++) {
+        const check2 = checks2[i];
+        check2.addEventListener('click', function () {
+          document.querySelectorAll('.input-radio__label').forEach(function (rLabel) {
+            rLabel.classList.remove('input-radio__label_active');
+          });
+          check2.parentNode.classList.toggle('input-radio__label_active');
+        });
+      };
+    };
+
+
   </script>
 
 
